<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/text_bluetooth_off"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/text_enable"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_view_paired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:enabled="false"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/text_view_paired"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/text_scan_devices"
        android:textColor="@color/white" />

</LinearLayout>