<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.testapp.android.subcontractor.RequestDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/layoutUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ownerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_name"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:saveEnabled="false"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAsset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutUser"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAssetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_name_"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/assetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:saveEnabled="false"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutAsset"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ownerAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:saveEnabled="false"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAssetLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutAccount"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ownerAssetLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/installation_location"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/assetLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:saveEnabled="false"
                android:textSize="17sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutAssetLocation"
            android:layout_marginTop="30dp"
            android:text="@string/device_installation_info"
            android:textSize="17sp" />

        <Button
            android:id="@+id/deviceInstallation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtInfo"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/device_installation"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>
